--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
         let isPlaying = false;
         let selectedAlbum = null;
         let hoveredAlbum = null;
+        let isMobile = false;
+        let lastTapTime = 0;
+        let lastTappedAlbum = null;
 
         const albumTextures = [
             'https://hebbkx1anhila5yf.public.blob.vercel-storage.com/スクリーンショット%202024-11-09%20190019-zwVYUcH4SCkN1XaqoRC2UCuV6H7Bzx.png',
@@ -116,6 +119,8 @@
         ];
 
         function init() {
+            isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+            
             scene = new THREE.Scene();
             camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
             renderer = new THREE.WebGLRenderer({ antialias: true });
@@ -133,8 +138,12 @@
             createRecord();
 
             window.addEventListener('resize', onWindowResize, false);
-            renderer.domElement.addEventListener('click', onMouseClick, false);
-            renderer.domElement.addEventListener('mousemove', onMouseMove, false);
+            if (isMobile) {
+                renderer.domElement.addEventListener('touchstart', onTouchStart, false);
+            } else {
+                renderer.domElement.addEventListener('click', onMouseClick, false);
+                renderer.domElement.addEventListener('mousemove', onMouseMove, false);
+            }
 
             animate();
         }
@@ -294,6 +303,58 @@
                     showRecord(clickedAlbum);
                 }
             }
+        }
+
+        function onTouchStart(event) {
+            event.preventDefault();
+            const touch = event.touches[0];
+            const raycaster = new THREE.Raycaster();
+            const mouse = new THREE.Vector2();
+            mouse.x = (touch.clientX / window.innerWidth) * 2 - 1;
+            mouse.y = -(touch.clientY / window.innerHeight) * 2 + 1;
+
+            raycaster.setFromCamera(mouse, camera);
+            const intersects = raycaster.intersectObjects(albumCovers);
+
+            if (intersects.length > 0) {
+                const tappedAlbum = intersects[0].object;
+                const currentTime = new Date().getTime();
+                const tapLength = currentTime - lastTapTime;
+                
+                if (tapLength < 300 && tappedAlbum === lastTappedAlbum) {
+                    // Double tap
+                    if (selectedAlbum === tappedAlbum) {
+                        hideRecord();
+                    } else {
+                        showRecord(tappedAlbum);
+                    }
+                } else {
+                    // Single tap
+                    bringAlbumForward(tappedAlbum);
+                }
+
+                lastTapTime = currentTime;
+                lastTappedAlbum = tappedAlbum;
+            }
+        }
+
+        function bringAlbumForward(album) {
+            albumCovers.forEach(cover => {
+                if (cover === album) {
+                    new TWEEN.Tween(cover.position)
+                        .to({ 
+                            x: cover.userData.originalPosition.x + 1,
+                            z: cover.userData.originalPosition.z + 1
+                        }, 300)
+                        .easing(TWEEN.Easing.Quadratic.Out)
+                        .start();
+                } else {
+                    new TWEEN.Tween(cover.position)
+                        .to(cover.userData.originalPosition, 300)
+                        .easing(TWEEN.Easing.Quadratic.Out)
+                        .start();
+                }
+            });
         }
 
         function showRecord(clickedAlbum) {
